feat(store): add easyStore export, refactor example build process

--- a/examples/simpleTodos/index.html
+++ b/examples/simpleTodos/index.html
@@ -3,5 +3,5 @@
 </head>
 <body>
   <div id="react-root"></div>
-  <script src="../../dist/simpleTodos.js"></script>
+  <script src="../dist/simpleTodos.js"></script>
 </body>
