feat(easyStore): add easyStore

--- a/examples/helloWorld/index.html
+++ b/examples/helloWorld/index.html
@@ -3,5 +3,5 @@
 </head>
 <body>
   <div id="react-root"></div>
-  <script src="../dist/helloWorld.js"></script>
+  <script src="bundle.js"></script>
 </body>
