--- a/examples/todoMVC/index.html
+++ b/examples/todoMVC/index.html
@@ -4,5 +4,5 @@
 </head>
 <body>
   <div id="react-root"></div>
-  <script src="../dist/todoMVC.js"></script>
+  <script src="bundle.js"></script>
 </body>
